--- a/src/components/listingPage.css
+++ b/src/components/listingPage.css
@@ -1,15 +1,54 @@
 body {
-    font-family: 'Source Sans Pro', sans-serif;
-    background-color: #dbdbdb;
+  font-family: 'Source Sans Pro', sans-serif;
+  background-color: #272525;
 }
 
-.listing-page {
-     
+.banner {
+  position: relative;
+}
+  
+.banner-image {
+  width: 100%;
+  height: 300px;
+}
+  
+.book-button {
+  position: absolute;
+  bottom: 10px; 
+  left: 10px;  
+  background-color: transparent;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px; 
+  cursor: pointer;
+  transition: background-color 0.3s ease;  
+}
+
+.book-button:hover {
+  background-color: #007bff;
 }
 
 .empty-message {
     text-align: center;
     width: 100%;
 }
-
+.banner-content {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: white;
+  text-align: left;
+  max-width: 50%;
+}
+  
+.banner-content h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+  
+.banner-content p {
+  font-size: 18px;
+}
+  
  
