--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 .App {
   text-align: center;
+  font-family: 'Helvetica';
+  background-color: #040404;  
 }
-
+body {
+  background-color: #040404;  
+  font-family: 'Helvetica'
+   
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -19,7 +25,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+ 
   font-size: calc(10px + 2vmin);
   color: white;
 }
