--- a/src/components/productNavigator.css
+++ b/src/components/productNavigator.css
@@ -1,4 +1,4 @@
-/* productCard.css */
+ 
 .product-card {
   background-color: #f8f6f6;
   border: 1px solid #eff4ef;
@@ -12,7 +12,7 @@
 
 .product-card h3 {
   margin: 0px;
-  color: #565a56;
+   
 }
 
 .product-image img {
@@ -26,24 +26,27 @@
   text-align: start;
 }
 
-.price-label {
-  color: #8a8989;
-}
+ 
 
 .product-price {
   margin-top: 5px;
   margin-bottom: 5px;
   font-size: 30px;
-  color: rgb(23, 22, 22);
+  color: white
 }
 
-/* productNavigator.css */
-.product-scroll-container {
+ 
+.product-navigator-container {
+  
   overflow-x: auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 0;
+  justify-content: flex-start;  
+  align-items: flex-start;  
+ background-color: #040404;
+  white-space: nowrap;  
+  overflow: auto;  
+  width: 100%;  
+  height: 600px;
 }
 
 .product-list {
@@ -53,6 +56,8 @@
 }
 
 .product-card {
+  color: #eff4ef;
+  background-color: #565a56;
   flex: 0 0 auto;
   transition: transform 0.3s ease, filter 0.3s ease;
 }
@@ -62,7 +67,7 @@
 }
 
 .product-card.blurred {
-  filter: blur(4px);
+  filter: blur(2px);
 }
 .arrow-button {
   background-color: transparent;
@@ -90,5 +95,5 @@
   margin: 5px;
 }
 .arrow-button:hover {
-  color: #007bff; /* Change the arrow color on hover */
+  color: #007bff;  
 }
